# NQFT

./: .gitignore  README.md  build_docs.sh  clus.dot  gitignore  makefile  pyproject.toml  requirements.txt  tmp_model.out
docs/: build_docs.sh
docs/nqft/: hall_effect.html  index.html  main.html  qcm.html
docs/source/: conf.py  index.rst  nqft.rst  tests.rst
nqft/: _qcm.py  functions.py  gen_hall.sh  hall_effect.py  hamiltonian.py  main.py  master_run.py  monte_carlo.py  qcm.py  run_hall.sh  try_qcm.py
nqft/Data/: hall_2x2.txt  hall_3x4.txt  n_h_1.txt  n_h_2.txt  n_h_2x2_n4_U001_eta01.txt  n_h_3.txt  n_h_filling_U0.txt  n_h_filling_U05.txt  n_h_filling_U1.txt  n_h_filling_U8.txt  n_h_rencontre.txt  test_model.py  test_test.csv
nqft/Data/data_filter/: filtered.txt  filtered_2.txt  filtered_indexed.txt  normal.txt  normal_2.txt  normal_indexed.txt
nqft/examples/: plot_article.gp  plot_nh_filter.gp  plot_nh_p.gp  plot_nh_u.gp
nqft/hall/: hall_effect.py
nqft/hamiltonian/: hamiltonian.py
qft/: main.py  pyqcm_test.py  qcm.py
qft/hamiltonian/: _funcs.py  funcs.py  qutip_funcs.py
rqft/: Cargo.toml  makefile
rqft/examples/: plot_comp_afm_rust.gp  plot_double_36.gp  plot_double_64.gp  plot_p_nh.gp  plot_p_nh_peter_64.gp
rqft/src/: qft_funcs.rs
rqft/src/Data/fermi_arc_data_1D_N36/: Akw_N24.csv  Akw_N28.csv  Akw_N32.csv  Akw_N34.csv
rqft/src/Data/fermi_arc_data_1D_N64/nk_200/: Akw_N56.csv  Akw_N64.csv
rqft_/examples/: plot_p_nh_peter_36.gp  plot_sw.gp
rqft_/src/: file_utils.rs  main.rs
source/: modules.rst
tests/: test_nqft.py  test_qft.py
(+177 files in other folders)
