[tool.poetry]
name = "QFT"
version = "0.1.0"
description = ""
authors = ["BCarnaval <antoinedelagrave@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.9.1"
qutip = "^4.7.0"
matplotlib = "^3.6.0"
tqdm = "^4.64.1"
pytest = "^7.1.3"
scikit-build = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
